[B]Version 1.1.9 - 27 Apr 2017[/B]
- Tamilgun Fix
- Runtamil Fix
- Apnaview Fix
- Thiruttuvcds fix
- Desitashan Search fix
- Moviefisher fix

[B]Version 1.1.8 - 18 Apr 2017[/B]
- Mersalaayitten Fix
- Desitashan new source
- MovieFK fix
- Tamilgun fix

[B]Version 1.1.7 - 1 Apr 2017[/B]
- Mersalaayitten Fix

[B]Version 1.1.6 - 24 Mar 2017[/B]
- Tamil Rasigan new scraper
- Yodesi fixes
- Tamilgun fix

[B]Version 1.1.5 - 21 Mar 2017[/B]
- OZee new scraper

[B]Version 1.1.4 - 19 Mar 2017[/B]
- Mersalaayitten Domain change
- Enable Mersalaayitten HD by default
- User can disable Mersalaayitten HD in settings if bandwidth is limited

[B]Version 1.1.3 - 5 Mar 2017[/B]
- Andhra Watch new scraper

[B]Version 1.1.2 - 2 Mar 2017[/B]
- Add APKLand VOD

[B]Version 1.1.1 - 22 Feb 2017[/B]
- Hindi Geetmala new scraper
- Abroad India improvements
- MovieRulz url changes
- Tamilgun url changes

[B]Version 1.1.0 - 7 Jan 2017[/B]
- Tamilgun scraper improvements

[B]Version 1.0.9 - 6 Jan 2017[/B]
- Abroad India Live TV improvements
 (Thanks to Abroad India for providing better access)
- Add MalayalamSerials Catchup TV

[B]Version 1.0.8 - 2 Jan 2017[/B]
- Tamilgun domain change

[B]Version 1.0.7 - 30 Dec 2016[/B]
- Abroad India Live TV code refine
- Tamilgun domain change

[B]Version 1.0.6 - 22 Dec 2016[/B]
- Abroad India Live TV code refine

[B]Version 1.0.5 - 21 Dec 2016[/B]
- Add Abroad India Live TV

[B]Version 1.0.4 - 18 Dec 2016[/B]
- Modify Yodesi scraper to display shows list

[B]Version 1.0.3 - 17 Dec 2016[/B]
- Add Apna View
- Fix Run Tamil New movies
- Fix MovieFK Hindi movies
- Fix Search caching
- Add Multipart Indications in video sources

[B]Version 1.0.2 - 11 Dec 2016[/B]
- Add Desi Tashan

[B]Version 1.0.1 - 07 Dec 2016[/B]
- Add Tamil Radio

[B]Version 1.0.0 - 06 Dec 2016[/B]
- Total rewrite of the addon
- Not relying on external frameworks
- Used BeautifulSoup3 instead of 4 due to Android issues
- Modular with scraper plugins

[B]Version 0.3.9 - 20 Nov 2016[/B]