@@ -1,5 +1,5 @@
 '''
-livemalayalamtv deccandelight plugin
+mhdtvlive deccandelight plugin
 Copyright (C) 2016 Gujal
 
 This program is free software: you can redistribute it and/or modify
@@ -20,51 +20,44 @@ from BeautifulSoup import BeautifulSoup, SoupStrainer
 import urllib, re, requests
 import HTMLParser
 
-class lmtv(Scraper):
+class mhdtv(Scraper):
     def __init__(self):
         Scraper.__init__(self)
         self.bu = 'http://mhdtvlive.com/'
-        self.icon = self.ipath + 'lmtv.png'
-        self.list = {'01Entertainment Channels': self.bu + 'entertainment_channels',
-                     '02News Channels': self.bu + 'news_channels',
-                     '03Regional Channels': self.bu + 'regional_web_channels',
-                     '04Devotional Channels': self.bu + 'devotional_channels',
-                     '07[COLOR yellow]** Search **[/COLOR]': self.bu + '?s='}
-  
+        self.icon = self.ipath + 'mhdtv.png'
+        self.list = {'01Tamil TV': self.bu + 'tamil_channels',
+                     '02Telugu TV': self.bu + 'telugu_channels',
+                     '03Malayalam TV': self.bu + 'malayalam_channels',
+                     '04Kannada TV': self.bu + 'kannada_channels',
+                     '05Hindi TV': self.bu + 'hindi_channels',
+                     '06English TV': self.bu + 'english_channels'}
+            
     def get_menu(self):
         return (self.list,7,self.icon)
-    
-    def get_items(self,url):
-        h = HTMLParser.HTMLParser()
-        movies = []
-        if url[-3:] == '?s=':
-            search_text = self.get_SearchQuery('Live Malayalam TV')
-            search_text = urllib.quote_plus(search_text)
-            url = url + search_text
-
-        html = requests.get(url, headers=self.hdr).text
-        mlink = SoupStrainer('div', {'class':re.compile('^row ')})
-        mdiv = BeautifulSoup(html, parseOnlyThese=mlink)
-        plink = SoupStrainer('ul', {'class':'pagination'})
-        Paginator = BeautifulSoup(html, parseOnlyThese=plink)
-        items = mdiv.findAll('div', {'class':re.compile('^col-sm-')})
-        for item in items:
-            title = h.unescape(item.h3.text).encode('utf8')
-            url = item.find('a')['href']
-            thumb = item.find('img')['src']
-            movies.append((title, thumb, url))
-
-        if 'Next' in str(Paginator):
-            nextpg = Paginator.find('a', {'class':'next page-numbers'})
-            purl = nextpg.get('href')
-            currpg = Paginator.find('span').text
-            pages = Paginator.findAll('a', {'class':'page-numbers'})
-            lastpg = pages[len(pages)-1].text
-            title = 'Next Page.. (Currently in Page %s of %s)' % (currpg,lastpg)
-            movies.append((title, self.nicon, purl))
         
-        return (movies,9)
-      
+    def get_items(self,iurl):
+        channels = []
+        h = HTMLParser.HTMLParser()
+        mlink = SoupStrainer('div', {'class':re.compile('^row ')})
+        plink = SoupStrainer('ul', {'class':'pagination'})
+        nextpg = True
+        while nextpg:
+            nextpg = False
+            html = requests.get(iurl, headers=self.hdr).text
+            mdiv = BeautifulSoup(html, parseOnlyThese=mlink)
+            Paginator = BeautifulSoup(html, parseOnlyThese=plink)
+            items = mdiv.findAll('div', {'class':re.compile('^col-sm-')})
+            for item in items:
+                title = h.unescape(item.h3.text).encode('utf8')
+                url = item.find('a')['href']
+                thumb = item.find('img')['src']
+                channels.append((title, thumb, url))
+            if 'Next' in str(Paginator):
+                nextdiv = Paginator.find('a', {'class':'next page-numbers'})
+                iurl = nextdiv.get('href')
+                nextpg = True  
+        return (sorted(channels),9) 
+
     def get_video(self,url):
 
         html = requests.get(url, headers=self.hdr).text
@@ -81,7 +74,7 @@ class lmtv(Scraper):
                 stream_url = re.findall('stream = "(.*?)"',html)[0]
             elif 'yupptv.' in tlink:
                 html = requests.get(tlink, headers=self.hdr).text
-                stream_url = re.findall("file:\s?'(.*?m3u8.*?)'",html)[0] + '|User-Agent=Mozilla/5.0 (yupp_andro_mob)'
+                stream_url = re.findall("file:\s?'(.*?m3u8.*?')",html)[0] + '|User-Agent=Mozilla/5.0 (yupp_andro_mob)'
             elif 'youtube.' in tlink:
                 stream_url = tlink
             else:
