@@ -108,28 +108,27 @@ class tamiltv(Scraper):
                 movies.append((title,icon,url))
         
         else:
-            html = requests.get(iurl, headers=self.hdr).text
             mlink = SoupStrainer('ul', {'id':'pm-grid'})
-            mdiv = BeautifulSoup(html, parseOnlyThese=mlink)
             plink = SoupStrainer('div', {'class':'pagination pagination-centered'})
-            Paginator = BeautifulSoup(html, parseOnlyThese=plink)
-            items = mdiv.findAll('div', {'class':'pm-li-video'})
-            for item in items:
-                title = item.h3.text.encode('utf8')
-                url = item.find('a')['href']
-                try:
-                    thumb = item.find('img')['src']
-                except:
-                    thumb = self.icon
-                movies.append((title, thumb, url))
-
-            pages = Paginator.findAll('li', {'class':''})
-            if '&raquo;' in str(pages):
-                currpg = Paginator.find('li', {'class':'active'}).text            
-                purl = pages[len(pages)-1].find('a')['href']
-                lastpg = pages[len(pages)-2].text
-                title = 'Next Page.. (Currently in Page %s of %s)' % (currpg,lastpg)
-                movies.append((title, self.nicon, purl))
+            nextpg = True
+            while nextpg:
+                nextpg = False
+                html = requests.get(iurl, headers=self.hdr).text
+                mdiv = BeautifulSoup(html, parseOnlyThese=mlink)
+                items = mdiv.findAll('div', {'class':'pm-li-video'})
+                for item in items:
+                    title = item.h3.text.encode('utf8')
+                    url = item.find('a')['href']
+                    try:
+                        thumb = item.find('img')['src']
+                    except:
+                        thumb = self.icon
+                    movies.append((title, thumb, url))
+                Paginator = BeautifulSoup(html, parseOnlyThese=plink)
+                pages = Paginator.findAll('li', {'class':''})
+                if '&raquo;' in str(pages):
+                    iurl = pages[len(pages)-1].find('a')['href']
+                    nextpg = True
         
         return (movies,9)
       
